cloudformation/micro_cloudformation/cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"
Metadata:
    Generator: "former2"
Description: "minimal ec2 asg and lt for solfunmeme solana"

Parameters:
  GitRepo:
    Type: "String"
    Description: "git repo for the agent you can modify this to your own repo"
    Default: "https://github.com/meta-introspector/services/"

  GitBranch:
    Type: "String"
    Description: "git branch for the agent you can modify this to your own branch"
    Default: "deployment/v0.0.1-solana-test-validator-x86"

  AgentCodeName:
    Type: 'String'
    Description: 'Agent codename for finding parameters'
    Default: 'SOLANA_agent_2'
      
  ChainName:
    Type: 'String'
    Description: 'Name of your chain'
    Default: 'SOLFUNMEME'

  LaunchTemplateVersion:
    Type: "String"
    Default: "1"
    Description: 'advanced option to use newer versions of launch templates'

  AvailabilityZone:
    Type: "String"
    Description: 'is appended to region name to create az'
    Default: "a"

  AmiId:
    Type: "String"
    Description: 'aws image id that is specific to the region you must also accept the licence for the ami'

  # Individual optional peer IP parameters
  PeerIp1:
    Type: "String"
    Description: "First peer IP address (CIDR notation, e.g., 192.168.1.100/32)"
    Default: ""

  PeerIp2:
    Type: "String"
    Description: "Second peer IP address (CIDR notation, e.g., 192.168.1.101/32)"
    Default: ""

  PeerIp3:
    Type: "String"
    Description: "Third peer IP address (CIDR notation, e.g., 192.168.1.102/32)"
    Default: ""

  PeerIp4:
    Type: "String"
    Description: "Fourth peer IP address (CIDR notation, e.g., 192.168.1.103/32)"
    Default: ""

  PeerIp5:
    Type: "String"
    Description: "Fifth peer IP address (CIDR notation, e.g., 192.168.1.104/32)"
    Default: ""

Conditions:
  HasPeerIp1: !Not [!Equals [!Ref PeerIp1, ""]]
  HasPeerIp2: !Not [!Equals [!Ref PeerIp2, ""]]
  HasPeerIp3: !Not [!Equals [!Ref PeerIp3, ""]]
  HasPeerIp4: !Not [!Equals [!Ref PeerIp4, ""]]
  HasPeerIp5: !Not [!Equals [!Ref PeerIp5, ""]]

Resources:
  MyDHCPOptions:
    Type: AWS::EC2::DHCPOptions
    DeletionPolicy: Delete
    Properties:
      DomainNameServers:
        - AmazonProvidedDNS

  IAMRoleAgent:
    Type: "AWS::IAM::Role"
    Properties:
      Path: "/"
      RoleName: !Sub '${ChainName}_ssm-solana-deploy-agent-role'
      AssumeRolePolicyDocument: "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Sid\":\"\",\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"ec2.amazonaws.com\"},\"Action\":\"sts:AssumeRole\"}]}"
      MaxSessionDuration: 3600
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
        - "arn:aws:iam::aws:policy/AmazonSSMPatchAssociation"
        - "arn:aws:iam::aws:policy/AmazonSSMManagedEC2InstanceDefaultPolicy"
      Policies:
        - PolicyName: 'SSMDescribeParametersPolicy'
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Sid: 'VisualEditor0'
                Effect: 'Allow'
                Action: 'ssm:DescribeParameters'
                Resource: '*'
                
  IAMInstanceProfile:
    DependsOn:
      - IAMRoleAgent
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      InstanceProfileName: !Sub "${ChainName}_agent-instance-profile"
      Roles:
        - !Ref IAMRoleAgent

  EC2VPC:
    Type: "AWS::EC2::VPC"
    Properties:
        CidrBlock: "10.0.0.0/16"
        EnableDnsSupport: true
        EnableDnsHostnames: true

  EC2SubnetPublicA:
    Type: "AWS::EC2::Subnet"
    Properties:
        AvailabilityZone: !Sub "${AWS::Region}${AvailabilityZone}"
        CidrBlock: "10.0.4.0/24"
        VpcId: !Ref "EC2VPC"
        MapPublicIpOnLaunch: false

  ### setup vpc with routes
  RouteTable:
    Type: "AWS::EC2::RouteTable"
    DependsOn:
      - InternetGateway
    Properties:
      VpcId: !Ref "EC2VPC"
        
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    
  VPCGatewayAttachment:
    DependsOn:
      - InternetGateway
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref "EC2VPC"
      InternetGatewayId: !Ref "InternetGateway"
      
  InternetRoute:
    Type: "AWS::EC2::Route"
    DependsOn:
      - InternetGateway
      - RouteTable
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable

  SubnetARouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref EC2SubnetPublicA

  EC2SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group for Solana node"
      GroupName: "solana-node-solana"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          Description: "All protocols IPv4"
          IpProtocol: "-1"
        - CidrIpv6: "::/0"
          Description: "All protocols IPv6"
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          Description: "Solana Gossip Protocol (TCP)"
          IpProtocol: "tcp"
          FromPort: 8000
          ToPort: 8000
        - CidrIp: "0.0.0.0/0"
          Description: "Solana Gossip Protocol (UDP)"
          IpProtocol: "udp"
          FromPort: 8000
          ToPort: 8000
        - CidrIp: "0.0.0.0/0"
          Description: "Solana RPC Port (TCP)"
          IpProtocol: "tcp"
          FromPort: 8899
          ToPort: 8899
        - CidrIp: "0.0.0.0/0"
          Description: "Solana Transaction Forwarding (UDP)"
          IpProtocol: "udp"
          FromPort: 8001
          ToPort: 8008
        - CidrIp: "0.0.0.0/0"
          Description: "SSH access for management"
          IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
      VpcId: !Ref "EC2VPC"

  # Peer security group ingress rules - only created if peer IPs are provided
  PeerGossipTcpIngress1:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp1
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp1
      Description: !Sub "Solana Gossip Protocol (TCP) from peer IP ${PeerIp1}"

  PeerGossipUdpIngress1:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp1
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp1
      Description: !Sub "Solana Gossip Protocol (UDP) from peer IP ${PeerIp1}"

  PeerRpcIngress1:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp1
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8899
      ToPort: 8899
      CidrIp: !Ref PeerIp1
      Description: !Sub "Solana RPC Port (TCP) from peer IP ${PeerIp1}"

  PeerTransactionIngress1:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp1
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8001
      ToPort: 8008
      CidrIp: !Ref PeerIp1
      Description: !Sub "Solana Transaction Forwarding (UDP) from peer IP ${PeerIp1}"

  PeerGossipTcpIngress2:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp2
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp2
      Description: !Sub "Solana Gossip Protocol (TCP) from peer IP ${PeerIp2}"

  PeerGossipUdpIngress2:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp2
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp2
      Description: !Sub "Solana Gossip Protocol (UDP) from peer IP ${PeerIp2}"

  PeerRpcIngress2:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp2
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8899
      ToPort: 8899
      CidrIp: !Ref PeerIp2
      Description: !Sub "Solana RPC Port (TCP) from peer IP ${PeerIp2}"

  PeerTransactionIngress2:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp2
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8001
      ToPort: 8008
      CidrIp: !Ref PeerIp2
      Description: !Sub "Solana Transaction Forwarding (UDP) from peer IP ${PeerIp2}"

  PeerGossipTcpIngress3:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp3
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp3
      Description: !Sub "Solana Gossip Protocol (TCP) from peer IP ${PeerIp3}"

  PeerGossipUdpIngress3:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp3
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp3
      Description: !Sub "Solana Gossip Protocol (UDP) from peer IP ${PeerIp3}"

  PeerRpcIngress3:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp3
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8899
      ToPort: 8899
      CidrIp: !Ref PeerIp3
      Description: !Sub "Solana RPC Port (TCP) from peer IP ${PeerIp3}"

  PeerTransactionIngress3:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp3
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8001
      ToPort: 8008
      CidrIp: !Ref PeerIp3
      Description: !Sub "Solana Transaction Forwarding (UDP) from peer IP ${PeerIp3}"

  PeerGossipTcpIngress4:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp4
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp4
      Description: !Sub "Solana Gossip Protocol (TCP) from peer IP ${PeerIp4}"

  PeerGossipUdpIngress4:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp4
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp4
      Description: !Sub "Solana Gossip Protocol (UDP) from peer IP ${PeerIp4}"

  PeerRpcIngress4:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp4
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8899
      ToPort: 8899
      CidrIp: !Ref PeerIp4
      Description: !Sub "Solana RPC Port (TCP) from peer IP ${PeerIp4}"

  PeerTransactionIngress4:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp4
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8001
      ToPort: 8008
      CidrIp: !Ref PeerIp4
      Description: !Sub "Solana Transaction Forwarding (UDP) from peer IP ${PeerIp4}"

  PeerGossipTcpIngress5:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp5
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp5
      Description: !Sub "Solana Gossip Protocol (TCP) from peer IP ${PeerIp5}"

  PeerGossipUdpIngress5:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp5
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8000
      ToPort: 8000
      CidrIp: !Ref PeerIp5
      Description: !Sub "Solana Gossip Protocol (UDP) from peer IP ${PeerIp5}"

  PeerRpcIngress5:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp5
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 8899
      ToPort: 8899
      CidrIp: !Ref PeerIp5
      Description: !Sub "Solana RPC Port (TCP) from peer IP ${PeerIp5}"

  PeerTransactionIngress5:
    Type: "AWS::EC2::SecurityGroupIngress"
    Condition: HasPeerIp5
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "udp"
      FromPort: 8001
      ToPort: 8008
      CidrIp: !Ref PeerIp5
      Description: !Sub "Solana Transaction Forwarding (UDP) from peer IP ${PeerIp5}"

  EC2LaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateName: "solana-node-t4g.micro-launch-template"
      LaunchTemplateData:
        IamInstanceProfile:
          Name: !Ref IAMInstanceProfile
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeleteOnTermination: true
            DeviceIndex: 0
            Groups:
              - !Ref EC2SecurityGroup
            NetworkCardIndex: 0
        ImageId: !Sub "${AmiId}"
        InstanceType: "t3.micro"
        UserData:
          Fn::Base64: !Sub |
              #!/bin/bash -xe
              export AGENT_NAME="${AgentCodeName}"
              export CHAIN_NAME="${ChainName}"
              export GIT_REPO="${GitRepo}"
              export GIT_BRANCH="${GitBranch}"
              mkdir -p /etc/solana/              
              echo AGENT_NAME="${AgentCodeName}" > /etc/solana/env
              echo CHAIN_NAME="${ChainName}" >> /etc/solana/env
              echo GIT_REPO="${GitRepo}" >> /etc/solana/env
              echo GIT_BRANCH="${GitBranch}" >> /etc/solana/env
              export HOME=/root
              apt update
              apt-get install -y ec2-instance-connect git wget unzip systemd curl
              apt-get install -y cloud-utils apt-transport-https ca-certificates curl software-properties-common              
              apt-get update              
              snap install amazon-ssm-agent --classic || echo oops1
              snap start amazon-ssm-agent || echo oops2
              if [ ! -d "/opt/agent/" ]; then
                git clone "${GitRepo}" "/opt/agent/"
              fi
              cd "/opt/agent/" || exit 1
              git stash
              git fetch --all
              git checkout --track --force "origin/${GitBranch}"
              bash -x /opt/agent/scripts/bootstrap.sh
        BlockDeviceMappings:
          - DeviceName: "/dev/sda1"
            Ebs:
              Encrypted: true
              VolumeSize: 30
              VolumeType: "gp3"

  AWSServiceRoleForAutoScaling:
    Type: AWS::IAM::ServiceLinkedRole
    Properties:
      CustomSuffix: !Sub '${AgentCodeName}'
      AWSServiceName: autoscaling.amazonaws.com
      
  AutoScalingAutoScalingGroup:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    DependsOn:
      - EC2LaunchTemplate
      - AWSServiceRoleForAutoScaling
    Properties:      
      Tags:
        - Key: Name
          Value: !Sub "${AgentCodeName}-agent"
          PropagateAtLaunch: true
      AutoScalingGroupName: "solana-ami-t3.micro-asg"
      LaunchTemplate:
        LaunchTemplateName: "solana-node-t3.micro-launch-template"
        Version: !Ref LaunchTemplateVersion
      MinSize: 1
      MaxSize: 2
      DesiredCapacity: 1
      Cooldown: 300
      AvailabilityZones:
        - !Sub "${AWS::Region}${AvailabilityZone}"
      HealthCheckType: "EC2"
      HealthCheckGracePeriod: 300
      VPCZoneIdentifier:
        - !Ref EC2SubnetPublicA
      TerminationPolicies:
        - "Default"
      ServiceLinkedRoleARN: !Sub "arn:aws:iam::${AWS::AccountId}:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling_${AgentCodeName}"
      NewInstancesProtectedFromScaleIn: false
